--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-REACT_APP_AUTH_SERVER_URL=http://localhost:4000/
+REACT_APP_AUTH_SERVER_URL=https://app-chat-etvf.onrender.com/
 REACT_APP_CHAT_SERVER_URL=http://localhost:5000/
 REACT_APP_UPLOAD_SERVER_URL=http://localhost:9000/
 REACT_APP_ADMIN_SERVER_URL=http://localhost:3000/
+"start": "concurrently \"npm run auth\" \"npm run chat\" \"npm run admin\" \"npm run upload\""
